--- a/client/src/components/TaskDrawer.css
+++ b/client/src/components/TaskDrawer.css
@@ -20,7 +20,7 @@
     box-shadow: -10px 0 30px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
-    animation: slide-in-right 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+    animation: slide-in-right 0.4s ease-out;
 }
 
 @keyframes fade-in {
